# exchange-rate-viewing-api

./: docker-compose.yml  postgres.sql
database_backup/: db_backup.sql  postgres.tar
postgres/: postmaster.pid
postgres/base/1/: 2619  2840  pg_internal.init
postgres/base/5/: 1247  1249  1259  16387  16388  16391  16392  16393  16395  16396  16398  16399  16400  16401  16403  16404  16406  16407  16409  16412  16415  16417  16423  16426  16428  16429  16431  16434  16435  16437  16441  16442  16443  16449  16450  16451  16464  16465  16466  16480  (+41 more)
postgres/global/: 1260  pg_control  pg_internal.init
postgres/pg_stat/: pgstat.stat
server/: postgres_dump.json  pyproject.toml  start_server.bat
server/api/: models.py  schema.yaml  serializers.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_alter_rates_date.py
server/server/: settings.py  urls.py
